--- a/polymarket/index.html
+++ b/polymarket/index.html
@@ -1,11 +1,24 @@
-<div id="polymarket-election-embed">
- <script
-  type="module"
-  src="https://unpkg.com/@polymarket/embeds@latest/dist/index.js" 
- />
- <polymarket-election-embed
- event="presidential-election-winner-2024"
-  volume="false"
-  theme="light"
- />
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Polymarket Election Embed</title>
+</head>
+<body>
+    <h1>2024 Presidential Election Market</h1>
+    
+    <div id="polymarket-election-embed">
+        <script
+            type="module"
+            src="https://unpkg.com/@polymarket/embeds@latest/dist/index.js"
+        ></script>
+        <polymarket-election-embed
+            event="presidential-election-winner-2024"
+            volume="false"
+            theme="light"
+        ></polymarket-election-embed>
+    </div>
+</body>
+</html>
+
